<resources>
    <string name="app_name">DPASemana09Firebase</string>
    <string name="valbtnlogin">LOGIN</string>
    <string name="valtxtemailhint">Ingrese su email</string>
    <string name="valtxtpasswordhint">Ingrese su contraseña</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_registro">Register</string>
    <string name="menu_listado">List</string>
    <string name="menu_mascota">Pet</string>
    <string name="menu_customer">Customer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valtitlecourse">Course Register</string>
    <string name="valtxtdescription">Entry a description</string>
    <string name="valtxtscore">Entry a score</string>
    <string name="valbtnsave">Save course</string>
    <string name="valtitlecustomer">Customer</string>
    <string name="valtxtfirstname">FIrst name</string>
    <string name="valtxtlastname">Last name</string>
    <string name="valtxtphone">Phone</string>
    <string name="valbtnsavedb">Save</string>
</resources>